# gov-data

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: public-sector-data-apis-opportunity-analysis.md
docs/drafts/: 2026-02-03-raw-input.md
src/govgraph/: auth.py  db.py  main.py  models.py  poller.py  security.py  settings.py  webhooks.py
src/govgraph/clients/: http.py  sam.py  usaspending.py
src/govgraph/static/: app.js  index.html  styles.css
tests/: conftest.py  test_health.py  test_upstream_errors.py  test_webhooks.py
