[project]
name = "govgraph"
version = "0.1.0"
description = "GovGraph: normalized US public-sector procurement + entity data APIs with alerts"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.125",
  "httpx>=0.27",
  "pydantic>=2.11",
  "pydantic-settings>=2.12",
  "uvicorn>=0.38",
]

[project.optional-dependencies]
dev = [
  "pytest>=9",
  "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
