[project]
name = "govgraph"
version = "0.1.0"
description = "GovGraph: normalized US public-sector procurement + entity data APIs with alerts"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0,<0.200",
  "httpx>=0.27.0,<0.28",
  "pydantic>=2.10.0,<3.0",
  "pydantic-settings>=2.6.0,<3.0",
  "uvicorn>=0.32.0,<0.40",
  "starlette>=0.41.0,<0.50",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "pytest-asyncio>=0.24.0,<0.25",
  "httpx>=0.27.0,<0.28",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
